--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup,UnusedAttribute"
         tools:replace="android:label">
-        <activity android:name=".modules.bengkel.Absensi_MainTab_Activity"></activity>
+        <activity android:name=".gmod.Laporan"></activity>
+        <activity android:name=".modules.bengkel.Absensi_MainTab_Activity" />
         <activity android:name=".modules.mekanik.LkkClaimMekanik_Activity" />
         <activity android:name=".modules.bengkel.KonfirmasiData_Pembayaran_Activity" />
         <activity android:name=".modules.sparepart.Status_PartKosong_Activity" />
@@ -304,6 +305,16 @@
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="stateHidden" />
 
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.rkrzmail.oto.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_path" />
+        </provider>
+
         <receiver android:name="com.rkrzmail.srv.OtoReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -316,7 +327,6 @@
                 <action android:name="com.nikita.generator.service" />
             </intent-filter>
         </receiver>
-
         <service
             android:name="com.rkrzmail.fcm.FCMMessagingService"
             tools:ignore="ExportedService">
@@ -324,6 +334,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <service
             android:name="com.rkrzmail.fcm.FCMInstanceIDService"
             tools:ignore="ExportedService">
@@ -331,17 +342,6 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-        <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.rkrzmail.oto.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_path" />
-
-        </provider>
     </application>
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
