--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,65 +14,131 @@
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup,UnusedAttribute"
         tools:replace="android:label">
-        <activity android:name=".modules.bengkel.Laporan_Activity"></activity>
-        <activity android:name=".modules.bengkel.Absensi_MainTab_Activity" />
-        <activity android:name=".modules.mekanik.LkkClaimMekanik_Activity" />
-        <activity android:name=".modules.bengkel.KonfirmasiData_Pembayaran_Activity" />
-        <activity android:name=".modules.sparepart.Status_PartKosong_Activity" />
-        <activity android:name=".modules.checkin.TambahPartJasaDanBatal_Activity" />
-        <activity android:name=".modules.sparepart.AturPartKeluar_Activity" />
-        <activity android:name=".modules.sparepart.DetailPartKeluar_Activity" />
-        <activity android:name=".modules.Otp_Activity" />
-        <activity android:name=".modules.checkin.DetailKontrolBooking_Activity" />
-        <activity android:name=".modules.bengkel.TambahLayanan" />
-        <activity android:name=".modules.komisi.AturKomisiPart_Activity" />
-        <activity android:name=".modules.komisi.KomisiPart_Activity" />
-        <activity android:name=".modules.bengkel.AturPembayaranElektronik_Activity" />
-        <activity android:name=".modules.bengkel.PembayaranElektronik_Activity" />
-        <activity android:name=".modules.sparepart.HistoryStockOpname_Activity" />
-        <activity android:name=".modules.sparepart.DetailCariPart_Activity" />
-        <activity android:name=".modules.hutang.PembayaranHutang_Activity" />
-        <activity android:name=".modules.hutang.Hutang_Activity" />
-        <activity android:name=".modules.hutang.PembayaranPiutang_Activity" />
-        <activity android:name=".modules.hutang.DetailPiutang_Activity" />
-        <activity android:name=".modules.hutang.Piutang_Activity" />
-        <activity android:name=".modules.LocationPicker_Activity" />
-        <activity android:name=".modules.sparepart.Status_TugasPart_Activity" />
-        <activity android:name=".modules.bengkel.ManualMessage_Activity" />
-        <activity android:name=".modules.bengkel.Message_Activity" />
-        <activity android:name=".modules.antar_jemput.SerahTerima_Activity" />
-        <activity android:name=".modules.antar_jemput.ChecklistAntarJemput_Activity" />
-        <activity android:name=".modules.antar_jemput.InformasiAntarJemput_Activity" />
-        <activity android:name=".modules.antar_jemput.AntarJemput_Activity" />
-        <activity android:name=".modules.sparepart.AturOutSource_Activity" />
-        <activity android:name=".modules.mekanik.InspeksiMekanik_Activity" />
-        <activity android:name=".modules.bengkel.AturCollection_Activity" />
-        <activity android:name=".modules.bengkel.Collection_Activity" />
-        <activity android:name=".modules.sparepart.UpdatePartKosong_Activity" />
-        <activity android:name=".modules.sparepart.MenungguPart_Activity" />
-        <activity android:name=".modules.sparepart.DetailTerimaPart_Activity" />
-        <activity android:name=".modules.checkin.AturCheckout_Activity" />
-        <activity android:name=".modules.checkin.CheckOut_Activity" />
-        <activity android:name=".modules.mekanik.AturInspeksi_Activity" />
-        <activity android:name=".modules.sparepart.JumlahPart_TugasPart_Activity" />
-        <activity android:name=".modules.mekanik.AturKerjaMekanik_Activity" />
-        <activity android:name=".modules.mekanik.PerintahKerjaMekanik_Activity" />
-        <activity android:name=".modules.bengkel.AturPembayaran_Activity" />
-        <activity android:name=".modules.bengkel.Rincian_Pembayaran_Activity" />
-        <activity android:name=".modules.bengkel.Pembayaran_MainTab_Activity" />
-        <activity android:name=".modules.checkin.DetailKontrolLayanan_Activity" />
-        <activity android:name=".modules.checkin.KontrolLayanan_Activity" />
-        <activity android:name=".modules.checkin.Checkin4_Activity" />
-        <activity android:name=".modules.checkin.HistoryBookingCheckin_Activity" />
-        <activity android:name=".modules.jasa.BiayaJasa_Activity" />
-        <activity android:name=".modules.jasa.JasaLainBerkala_Activity" />
-        <activity android:name=".modules.jasa.JasaLain_Activity" />
-        <activity android:name=".modules.sparepart.JumlahPart_Checkin_Activity" />
-        <activity android:name=".modules.sparepart.Part_Activity" />
-        <activity android:name=".modules.sparepart.PartBerkala_Activity" />
-        <activity android:name=".modules.checkin.Checkin3_Activity" />
-        <activity android:name=".modules.checkin.Checkin2_Activity" />
-        <activity android:name=".modules.checkin.Checkin1_Activity" />
+        <activity android:name=".modules.bengkel.Laporan_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.Absensi_MainTab_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.mekanik.LkkClaimMekanik_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.KonfirmasiData_Pembayaran_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.Status_PartKosong_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.checkin.TambahPartJasaDanBatal_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.AturPartKeluar_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.DetailPartKeluar_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.Otp_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.checkin.DetailKontrolBooking_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.TambahLayanan"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.komisi.AturKomisiPart_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.komisi.KomisiPart_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.AturPembayaranElektronik_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.PembayaranElektronik_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.HistoryStockOpname_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.DetailCariPart_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.hutang.PembayaranHutang_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.hutang.Hutang_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.hutang.PembayaranPiutang_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.hutang.DetailPiutang_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.hutang.Piutang_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.LocationPicker_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.Status_TugasPart_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.ManualMessage_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.Message_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.antar_jemput.SerahTerima_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.antar_jemput.ChecklistAntarJemput_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.antar_jemput.InformasiAntarJemput_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.antar_jemput.AntarJemput_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.AturOutSource_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.mekanik.InspeksiMekanik_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.AturCollection_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.Collection_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.UpdatePartKosong_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.MenungguPart_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.DetailTerimaPart_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.checkin.AturCheckout_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.checkin.CheckOut_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.mekanik.AturInspeksi_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.JumlahPart_TugasPart_Activity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".modules.mekanik.AturKerjaMekanik_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.mekanik.PerintahKerjaMekanik_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.AturPembayaran_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.Rincian_Pembayaran_Activity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.bengkel.Pembayaran_MainTab_Activity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.checkin.DetailKontrolLayanan_Activity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.checkin.KontrolLayanan_Activity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.checkin.Checkin4_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.checkin.HistoryBookingCheckin_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.jasa.BiayaJasa_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.jasa.JasaLainBerkala_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.jasa.JasaLain_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.JumlahPart_Checkin_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.Part_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.PartBerkala_Activity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.checkin.Checkin3_Activity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.checkin.Checkin2_Activity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.checkin.Checkin1_Activity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".modules.sparepart.TugasPart_MainTab_Activity" />
         <activity android:name=".modules.bengkel.ProfileBengkel_Activity" />
         <activity android:name=".modules.sparepart.JumlahPart_PartKeluar_Activity" />
@@ -103,7 +169,7 @@
         <activity android:name=".modules.discount.AturDiscountPart_Activity" />
         <activity android:name=".modules.discount.DiscountPart_Activity" />
         <activity android:name=".modules.discount.AturSpotDiscount_Activity" />
-        <activity android:name=".modules.discount.SpotDiscount_Activity" />
+        <activity android:name=".modules.discount.DiscountSpot_Activity" />
         <activity android:name=".modules.checkin.Booking3_Activity" />
         <activity android:name=".modules.checkin.Booking2_Activity" />
         <activity android:name=".modules.checkin.Booking1B_Activity" />
@@ -124,16 +190,26 @@
         <activity android:name=".modules.bengkel.AturLayanan_Activity" />
         <activity android:name=".modules.bengkel.Layanan_Avtivity" />
         <activity android:name=".modules.bengkel.PembayaranJurnal_Activity" />
-        <activity android:name=".modules.bengkel.AturJurnal_Activity" />
-        <activity android:name=".modules.bengkel.DaftarJurnal_Activity" />
-        <activity android:name=".modules.sparepart.AturPenyesuain_StockOpname_Activity" />
-        <activity android:name=".modules.sparepart.AturStockOpname_Activity" />
-        <activity android:name=".modules.sparepart.TerimaPart" />
-        <activity android:name=".modules.sparepart.AturLokasiPart_Activity" />
-        <activity android:name=".modules.sparepart.AturTerimaPart_Activity" />
-        <activity android:name=".modules.sparepart.AturDetail_TerimaPart_Activity" />
-        <activity android:name=".modules.mekanik.AturBiayaMekanik2" />
-        <activity android:name=".modules.mekanik.BiayaMekanik2Activity" />
+        <activity android:name=".modules.bengkel.AturJurnal_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.DaftarJurnal_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.AturPenyesuain_StockOpname_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.AturStockOpname_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.TerimaPart"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.AturLokasiPart_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.AturTerimaPart_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.AturDetail_TerimaPart_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.mekanik.AturBiayaMekanik2"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.mekanik.BiayaMekanik2Activity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".modules.sparepart.Spareparts_Activity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
@@ -144,12 +220,18 @@
                 android:resource="@xml/searchable"
                 android:value="com.rkrzmail.oto.modules.lokasi_part.CariPart_Activity" />
         </activity>
-        <activity android:name=".modules.sparepart.AturParts_Activity" />
-        <activity android:name=".gmod.PengambilanPartActivity" />
-        <activity android:name=".gmod.DaftarTugasPartActivity" />
-        <activity android:name=".gmod.JumlahPartActivity" />
-        <activity android:name=".modules.jasa.JasaExternal_Activity" />
-        <activity android:name=".gmod.JasaLainDetail" />
+        <activity android:name=".modules.sparepart.AturParts_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".gmod.PengambilanPartActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".gmod.DaftarTugasPartActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".gmod.JumlahPartActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.jasa.JasaExternal_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".gmod.JasaLainDetail"
+            android:screenOrientation="portrait"/>
         <activity android:name=".gmod.JasaLainBerkalaActivity" />
         <activity android:name=".gmod.PartBerkalaActivity" />
         <activity android:name=".gmod.AturSparepartActivity" />
@@ -161,8 +243,10 @@
         <activity android:name=".gmod.Stock_OpnameActivity" />
         <activity android:name=".gmod.Penampung_Item_DetailActivity" />
         <activity android:name=".gmod.MyCode" />
-        <activity android:name=".modules.mekanik.AturSchedule_Activity" />
-        <activity android:name=".modules.sparepart.LokasiPart_Activity" />
+        <activity android:name=".modules.mekanik.AturSchedule_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.sparepart.LokasiPart_Activity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".WebActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
