--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:name=".modules.bengkel.Absensi_MainTab_Activity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".modules.bengkel.Dashboard_Activity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".modules.mekanik.LkkClaimMekanik_Activity"
             android:screenOrientation="portrait" />
         <activity
