--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,15 @@
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup,UnusedAttribute"
         tools:replace="android:label">
-        <activity android:name=".modules.komisi.AturKomisiTerbayar_Activity"></activity>
+        <activity
+            android:name=".modules.bengkel.Dashboard_Activity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.komisi.KomisiTerbayar_Activity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.komisi.AturKomisiTerbayar_Activity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".modules.bengkel.Laporan_Activity"
             android:screenOrientation="portrait" />
