--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup,UnusedAttribute"
         tools:replace="android:label">
+        <activity
+            android:name=".modules.bengkel.Schedule_MainTab_Activity"
+            android:screenOrientation="portrait" />
         <activity android:name=".modules.bengkel.AturSaran_Activity"></activity>
         <activity android:name=".modules.bengkel.SaranActivity" />
         <activity
