--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,26 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup,UnusedAttribute"
-        tools:replace="android:label">
+        tools:replace="android:label,android:appComponentFactory">
+        <activity
+            android:name=".modules.bengkel.Asset_Activity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.bengkel.AturAsset_Activity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.bengkel.AturPembayaranInvoice_Activity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".modules.bengkel.AturTotalInvoice_Activity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".modules.bengkel.Schedule_MainTab_Activity"
             android:screenOrientation="portrait" />
-        <activity android:name=".modules.bengkel.AturSaran_Activity"></activity>
-        <activity android:name=".modules.bengkel.SaranActivity" />
+        <activity android:name=".modules.bengkel.AturSaran_Activity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".modules.bengkel.SaranActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".modules.bengkel.Dashboard_MainTab_Activity"
             android:screenOrientation="portrait" />
@@ -99,7 +113,7 @@
             android:name=".modules.hutang.DetailPiutang_Activity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".modules.hutang.Piutang_Activity"
+            android:name=".modules.hutang.Piutang_MainTab_Activity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".modules.LocationPicker_Activity"
@@ -480,6 +494,10 @@
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="stateHidden" />
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/GoogleMapsApi" />
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.rkrzmail.oto.fileprovider"
@@ -502,6 +520,7 @@
                 <action android:name="com.nikita.generator.service" />
             </intent-filter>
         </receiver>
+
         <service
             android:name="com.rkrzmail.fcm.FCMMessagingService"
             tools:ignore="ExportedService">
@@ -516,14 +535,11 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/GoogleMapsApi" />
+
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
     </application>
-
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -536,6 +552,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
 </manifest>
