--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,10 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
     //gridview width dynamically
     implementation 'com.riontech.staggeredtextgridview:staggeredtextgridview:1.0.1'
-
+    //multiple date picker
+    implementation 'com.squareup:android-times-square:1.6.5@aar'
+    //implementation 'com.aminography:primedatepicker:3.3.2'
+    //implementation 'com.aminography:primecalendar:1.3.2'
 
 }
 
