--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,10 @@ dependencies {
     implementation 'com.squareup:android-times-square:1.6.5@aar'
     //implementation 'com.aminography:primedatepicker:3.3.2'
     //implementation 'com.aminography:primecalendar:1.3.2'
+    //okHttp
+    implementation 'com.squareup.okhttp:okhttp:2.6.0'
+    //searchable spinner
+    implementation 'com.github.MdFarhanRaja:SearchableSpinner:2.0'
 
 }
 
