--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,10 +43,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup,HardcodedDebugMode,UnusedAttribute"
-        tools:replace="android:label,android:appComponentFactory"
-        android:testOnly="false"
-        android:debuggable="true"
-        >
+        tools:replace="android:label,android:appComponentFactory">
 
         <provider
             android:name="android.support.v4.content.FileProvider"
