--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 30
     defaultConfig {
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 30
         versionCode 20
         versionName "1.20"
@@ -131,6 +131,9 @@ dependencies {
     /* //ROOM DATABASE
      implementation 'android.arch.persistence.room:runtime:1.0.0-alpha1'
      annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha1'*/
+
+    //Pusher
+    implementation 'com.pusher:pusher-java-client:2.2.6'
 }
 
 
